# MathModelAgent

./: .gitignore  AGENTS.md  CHANGE.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.txt  ENV_SETUP.md  GiteeAI_Integration_Complete.md  MathModelAgent_PPT.md  MathModelAgent工具生态分析.ipynb  QUICK_START.md  README.md  README_EN.md  cleanup_services.bat  docker-compose.yml  dump.rdb  dump.rdb.backup2  mac_start.sh  redis_start_clean.bat  start_all.bat  win_start.bat  升级说明.md  实际执行工作流展示.md
.claude/: hook_lint.sh  settings.json
.trae/documents/: stop-running-button-plan.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  test_api.py  test_gitee_integration.py
backend/app/: main.py
backend/app/config/: md_template.toml  setting.py
backend/app/core/: agents.py  evaluator.py  flows.py  functions.py  prompts.py  prompts.py.backup  workflow.py
backend/app/models/: mathematical_models.py  user_output.py
backend/app/schemas/: A2A.py  (+3 more)
backend/scripts/: build_knowledge_base.py
frontend/: .dockerignore  .env.development  Dockerfile  nginx.conf  package-lock.json  vite.config.ts
logs/messages/: 20251031-153025-0797d02f.json  20251031-153106-5f78218e.json
redis-portable/: dump.rdb.backup
sandbox/: Dockerfile  README.md  pyproject.toml
sandbox/app/: __init__.py  main.py
sandbox/app/routers/: common_router.py  files_router.py  interpreter_router.py  router.py  shell_router.py
skills/1start-mathmodel/: SKILL.md
skills/3coding-visual/: SKILL.md
skills/4drawio/: SKILL.md
skills/5writing/: SKILL.md
skills/6verity/: SKILL.md
skills/doctor/: SKILL.md
(+70 files in other folders)
